# graph-pes

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  THISPR  TODO.md  basic.yaml  cgap17.py  config.yaml  philosophy.md  pyproject.toml
.github/workflows/: changelog.yaml  publish.yaml  tests.yaml
configs/: kitchen-sink.yaml  minimal.yaml  realistic.yaml
docs/: loss-fns.md  thoughts.md
docs/source/: analysis.rst  atomic-graph.rst  conf.py  data.rst  development.rst  examples.rst  hide-title.html  index.rst  losses.rst  models.rst  nn.rst  quickstart-config.yaml  quickstart.py  tech-stack.rst  theory.ipynb  theory.rst  training.rst  training_setup.py  transforms.rst  utils.rst
docs/source/_static/: Na.html  custom.css  water.html
docs/source/building-blocks/: aggregation.rst  distances.rst  e3nn.rst  envelopes.rst  nn.rst  root.rst  scaling.rst  transforms.rst
docs/source/cli/: graph-pes-id.rst  graph-pes-resume.rst  graph-pes-test.rst  graph-pes-train.rst
docs/source/cli/graph-pes-train/: complete-docs.rst  examples.rst  root.rst  the-basics.rst
docs/source/data/: atomic_graph.rst  batching.rst  datasets.rst  loader.rst  root.rst  transforms.rst
docs/source/fitting/: callbacks.rst  losses.rst  optimizers.rst  root.rst
docs/source/graph-pes-train/: configuration.rst  examples.rst  root.rst
docs/source/interfaces/: mace.rst  mattersim.rst  orb.rst
docs/source/md/: ase.ipynb  root.rst
docs/source/models/: addition.rst  distances.rst  ensembling.rst  functional.rst  mace.rst  nn.rst  offsets.rst  painn.rst  pairwise.rst  root.rst  schnet.rst
docs/source/models/many-body/: eddp.rst  mace.rst  nequip.rst  painn.rst  root.rst  schnet.rst  stillinger-weber.rst  tensornet.rst
docs/source/notebooks/: calc.ipynb  correctness.ipynb  example.ipynb
docs/source/quickstart/: custom-training-loop.ipynb  fine-tune-config.yaml  fine-tune.yaml  fine-tuning.ipynb  finetune-cgap20u.yaml  foundation-models.ipynb  implement-a-model.ipynb  model-analysis.ipynb  model-fine-tuning.ipynb  mp0.yaml  orb.yaml  quickstart-cgap17.yaml  quickstart-config.yaml  quickstart.ipynb  root.rst  train-a-model.ipynb  train-a-model.rst
docs/source/quickstart/graph-pes-results/quickstart-run/: model.pt
docs/source/tools/: analysis.rst  ase.ipynb  lammps.ipynb  lammps.rst  torch-sim.ipynb
docs/source/training/: losses.rst  train_model.rst
scripts/: build-lammps.sh
src/graph_pes/: __init__.py  analysis.py  atomic_graph.py  calculator.py  config.py  core.py  deploy.py  graph_pes_model.py  logger.py  loss.py  nn.py  train.py  training-old.py  training.py  transform.py  util.py
src/graph_pes/analysis/: __init__.py
src/graph_pes/analysis_old/: __init__.py
src/graph_pes/config/: __init__.py  config.py  defaults.yaml  shared.py  spec.py  testing.py  training-defaults.yaml  training.py  utils.py
src/graph_pes/configs/: defaults.yaml  minimal.yaml
src/graph_pes/data/: __init__.py  ase_db.py  atomic_graph.py  batching.py  dataset.py  dataset_utils.py  datasets.py  graph_typing.py  io.py  keys.py  loader.py  module.py  utils.py
src/graph_pes/graphs/: __init__.py  graph_typing.py  keys.py  operations.py
src/graph_pes/interfaces/: __init__.py  _mace.py  _mattersim.py  _orb.py  base.py  mace.py  mace_test.py  mattersim_test.py  orb_test.py  quick.yaml
src/graph_pes/models/: __init__.py  activations.py  addition.py  base.py  distances.py  eam.py  eddp.py  m3gnet.py  mlp.py  offsets.py  painn.py  pairwise.py  pre_fit.py  scaling.py  schnet.py  scripted.py  stillinger_weber.py  tensornet.py  transforms.py  unit_converter.py  util.py  zoo.py
src/graph_pes/models/components/: aggregation.py  distances.py  scaling.py
src/graph_pes/models/e3nn/: _high_order_CG_coeff.pt  mace.py  mace_new.py  mace_utils.py  nequip.py  utils.py
src/graph_pes/pair_style/: pair_graph_pes.cpp
src/graph_pes/scripts/: automation.yaml  generation.py  id.py  resume.py  test.py  train.py  utils.py
src/graph_pes/tasks/: __init__.py  loss.py
src/graph_pes/training/: callbacks.py  loss.py  manual.py  opt.py  ptl.py  ptl_utils.py  task.py  tasks.py  trainer.py  util.py  utils.py
src/graph_pes/utils/: analysis.py  calculator.py  distributed.py  lammps.py  logger.py  misc.py  nn.py  sampling.py  shift_and_scale.py  threebody.py
src/lammps/: pair_graph_pes.cpp  pair_graph_pes.h
tests/: test.xyz  test_aggregation.py  test_analysis.py  test_atomic_graph.py  test_atoms_datasets.py  test_batching.py  test_calculator.py  test_config.py  test_cutoffs.py  test_data_utils.py  test_deploy.py  test_direct_prediction.py  test_distances.py  test_equivariance.py  test_generation.py  test_integration.py  test_lammps.py  test_loss.py  test_models.py  test_nn.py  test_offsets.py  test_opt.py  test_parameter_counting.py  test_pre_fit.py  test_predictions.py  test_repr.py  test_scaling.py  test_torchscript.py  test_train_script.py  test_transform.py  test_util.py
tests/config/: test_config.py
tests/data/: schnetpack_data.db  test_ase_datasets.py  test_atomic_graph.py  test_atoms_datasets.py  test_batching.py  test_db.py  test_utils.py
tests/graphs/: test_atomic_graph.py  test_batching.py  test_conversions.py  test_threebody.py
tests/helpers/: __init__.py
tests/models/: test_correctness.py  test_cutoffs.py  test_direct_prediction.py  test_equivariance.py  test_freezing.py  test_m3gnet.py  test_models.py  test_offsets.py  test_parameter_counting.py  test_predictions.py  test_scripting.py  test_state_dict.py
tests/models/components/: test_aggregation.py  test_distances.py
tests/training/: test_callbacks.py  test_config.py  test_equigrad.py  test_generation.py  test_integration.py  test_loss.py  test_opt.py  test_pre_fit.py  test_train_script.py
tests/utils/: test_analysis.py  test_auto_offset.py  test_calculator.py  test_deploy.py  test_dtypes.py  test_lammps.py  test_misc.py  test_multi_sequence.py  test_nn.py  test_sampling.py
