[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-pes"
version = "0.0.0"
description = "Potential Energy Surfaces on Graphs"
readme = "README.md"
authors = [{ name = "John Gardner", email = "gardner.john97@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = ["torch", "torch-geometric", "pytorch-lightning", "ase", "numpy"]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "notebook",
    "pytest",
    "pytest-cov",
    "bumpver",
    "sphinx",
    "furo",
    "nbsphinx",
]
publish = ["build", "twine"]

[project.urls]
Homepage = "https://github.com/jla-gardner/digital-experiments"

[tool.bumpver]
current_version = "1.2.8"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/graph_pes/__init__.py" = ["{version}"]
