[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-pes"
version = "0.0.7"
description = "Potential Energy Surfaces on Graphs"
readme = "README.md"
authors = [{ name = "John Gardner", email = "gardner.john97@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = [
    "torch",
    "pytorch-lightning",
    "ase==3.22.1", # TODO: unpin this? or pin other versions?
    "numpy",
    "rich",
    "dacite",
    "e3nn",
    "scikit-learn",
    "locache",
    "load-atoms",
    "wandb",
]
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pyright"]
dev = ["notebook", "ruff", "bumpver", "pyright", "sphinx-autobuild"]
docs = [
    "sphinx",
    "furo",
    "nbsphinx",
    "sphinxext-opengraph",
    "sphinx-copybutton",
    "sphinx-design",
]
publish = ["build", "twine"]

[project.scripts]
graph-pes-train = "graph_pes.scripts.train:main"
graph-pes-id = "graph_pes.scripts.id:main"

[project.urls]
Homepage = "https://github.com/jla-gardner/graph-pes"

[tool.bumpver]
current_version = "0.0.7"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/graph_pes/__init__.py" = ["{version}"]
"docs/source/conf.py" = ['release = "{version}"']
"src/graph_pes/graph_pes_model.py" = ['self._GRAPH_PES_VERSION: Final\[str\] = "{version}"']

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["SIM300", "E402", "E703", "F722", "UP037", "F821", "B018", "E741"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "def _repr",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
    "except ImportError",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
]

# allow for coverage to find relevant files in both src/ and */site-packages
# so that we can install the package both normally and in editable mode, and 
# still get coverage for both cases using `pytest --cov`
[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["graph_pes"]

[tool.pytest.ini_options]
# ignore all warnings coming from the pytorch_lightning package
filterwarnings = [
    "ignore::DeprecationWarning:pytorch_lightning",
    "ignore::DeprecationWarning:lightning_fabric",
    "ignore::DeprecationWarning:lightning_utilities",
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning:torchmetrics",
    "ignore::UserWarning:pytorch_lightning",
    "ignore:.*The TorchScript type system doesn't support instance-level annotations on empty non-base types.*",
]
norecursedirs = "tests/helpers"

[tool.pyright]
include = ["."]
reportUnnecessaryTypeIgnoreComment = "error"
reportPrivateImportUsage = "none"
